[gd_scene load_steps=5 format=3 uid="uid://dti8ibxix1tke"]

[ext_resource type="Script" uid="uid://cymg35weskqim" path="res://Scripts/mob_spawner_3d.gd" id="1_fi7xd"]
[ext_resource type="PackedScene" uid="uid://c1vg0yntw7eyf" path="res://Character/bat.tscn" id="2_caxdb"]
[ext_resource type="PackedScene" uid="uid://b0h60dofcvbfc" path="res://Character/boss_bat.tscn" id="3_i1hj5"]
[ext_resource type="PackedScene" uid="uid://bw2m6rpraye2r" path="res://Assets/mob/spawner/spawner_model.glb" id="3_l2r5n"]

[sub_resource type="Resource" id="Resource_5pjfe"]
metadata/__load_path__ = "res://Character/Mob/bat_model.tscn"

[node name="MobSpawner3D" type="Node3D"]
script = ExtResource("1_fi7xd")
mob_to_spawn = ExtResource("2_caxdb")
boss_mob_to_spawn = ExtResource("3_i1hj5")
mob_to_spawn = SubResource("Resource_5pjfe")

[node name="spawner_model" parent="." instance=ExtResource("3_l2r5n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.025574, 0)

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42937565, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
